# dotfiles

./: .cz.toml  .editorconfig  .gitignore  .gitmodules  .luacheckrc  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  archinstalled-pkgs  backlog.md  installation.md  makefile  pacman-install.sh  pyproject.toml  repositories.yaml  taskfile.yml  workspace.json  workspace.yaml
.github/workflows/: bumpversion.yaml  release-please.yml
aider/: .aider.conf.yml  README.md
anvil/: settings.py  version.py
anvil/tests/: settings_test.py  version_test.py
arch/: .xinitrc
arch-installation/: 00-base.sh  01-awesomewm.sh  01-bspwm.sh  01-gnome.sh  01-window-manager.sh  02-extras.sh  03-development.sh  03-yay.sh  04-audio.sh  04-bluetooth.sh  08-games.sh  awesomewm_installation_checklist.md  installation_checklist.md  makefile
awesome/: .xinitrc
bash/: 00-base.sh  00-installer.sh  01-window-manager.sh  01-wm-installer.sh  02-gnome-installer.sh  02-gui-extras.sh  02-yay-installer.sh  03-yay.sh  08-games.sh
docs/: ARCHINSTALL.md  NOTES-LINUX.md  NOTES-MACOS.md  README-INSTALLATION.md  backlog.md  checklist.md  firefox.md  g14.md  gnome.md  installation.md  installation_checklist.md  keybindings.md  refactoring.md  todo.md  v7-shogun.md  v8-going-postal.md  v8-guards-guards.md
dotfiles/: repository_setup.py  version.py
dotfiles/archlinux/: .xprofile
dotfiles/tests/: settings_test.py  version_test.py
dotfiles/wip/: generate_fish_abbr.py
git/: .gitconfig  .gitignore  example.gitconfig.pers  example.gitconfig.work  git-help.md  projects.json  workspace.json
git/ssh/: example.config
installation/: installation.md
installation/arch/: 00-base.sh  01-bspwm.sh  01-gnome.sh  01-qtile.sh  02-extras.sh  03-development.sh  03-python.sh  03-sdkman.zsh  05-pipx.sh  06-productivity.sh  08-games.sh  99-archinstall.sh  awesomewm_installation_checklist.md  makefile
installation/arch_v2/: 01-defaults.sh  02-yay.sh  03-zsh.sh  04-wireless-bluetooth.sh  05-audio.sh  06-stow-config.sh  07-productivity.sh  09-gaming.sh  10-awesomewm.sh  12-gnome.sh  21-sdkman.zsh  31-keyboard.sh  32-mouse.sh  50-awesomewm.sh  50-extras.sh  51-qtile.sh  52-gnome.sh  90-extras.sh  dotfiles.md  makefile  qtile-checklist.md  steps.md
installation/linux/: 01-base.sh  01-defaults.sh  02-yay.sh  03-zsh.sh  04-wireless-bluetooth.sh  05-audio.sh  06-stow-config.sh  07-productivity.sh  22-neovim.sh  23-development.sh  24-gnome-gaming.sh  31-keyboard.sh  32-mouse.sh  50-awesomewm.sh  51-qtile.sh  52-bspwm.sh  52-gnome.sh  53-gnome-gaming.sh  55-bspwm.sh  55-xfce.sh  README.md  makefile  minimal-setup.sh
installation/macos/: 01-zsh.sh  03-zsh.sh  Brewfile  README.md  brew-install.sh  macos-defaults.sh  makefile  minimal-setup.sh
linux/: .Xresources
linux/docs/: checklist.md  keybindings.md  refactoring.md  todo.md
linux/installation/: 00-archinstall.sh  03-zsh.sh  06-stow-config.sh  07-productivity.sh  21-sdkman.zsh  22-neovim.sh  23-development.sh  31-keyboard.sh  51-qtile.sh  checklist.md  dotfiles.md  keybindings.md  makefile  steps.md
macos/installation/: 01-zsh.sh  README.md  makefile
python/: decorate_flatten_colorscheme.py  velvet.json
python/git/: cloneworkspace.py  input-example.json  repositories.json  workspace.json
python/resources/: velvet.json
qtile/: .xinitrc
sys/: .Xresources  .xinitrc  .zshenv
sys/.config/: mimeapps.list  user-dirs.dirs
taskfiles/: TODO.md  taskfile.ai.yml  taskfile.brew.yml  taskfile.depository.yml  taskfile.fish.yml  taskfile.foundry.yml  taskfile.gotask.yml  taskfile.helper.yml  taskfile.hyprland.yml  taskfile.linux.yml  taskfile.macos.yml  taskfile.neovim.yml  taskfile.pacman.yml  taskfile.poetry.yml  taskfile.precommit.yml  taskfile.python.yml  taskfile.sdkman.yml  taskfile.stow.yml  taskfile.submodules.yml  taskfile.terminal.yml  taskfile.zimfw.yml  taskfile.zsh.yml
taskfiles/scripts/: Brewfile  (+18 more)
terminal/: .bashrc  .zshenv
zsh/: .zshenv
(+603 files in other folders)
